--- a/frontend/src/app/pages/task-view/task-view.component.html
+++ b/frontend/src/app/pages/task-view/task-view.component.html
@@ -3,23 +3,30 @@
     <div class="sidebar has background-white">
       <h1 class="title has-text-primary">Lists</h1>
       <div class="list-menu">
-        <a class="list-menu-item is-active">
-          <p>List1</p>
-        </a>
-        <a class="list-menu-item">
-          <p>List1</p>
+        <a
+          class="list-menu-item"
+          *ngFor="let list of lists"
+          [routerLink]="['/lists', list._id]"
+          routerLinkActive="is-active"
+        >
+          <p>{{ list.title }}</p>
         </a>
       </div>
-      <button class="button is-primary has-text-white">+ New List</button>
+      <button class="button is-primary has-text-white" routerLink="/new-list">
+        + New List
+      </button>
     </div>
     <div class="task-list-container has background-white">
       <h1 class="title has-text-primary">Tasks</h1>
-      <div class="task">
-        <p>Something to do</p>
+      <div class="task" *ngFor="let task of tasks">
+        <p>{{ task.title }}</p>
       </div>
-      <div class="task complete">
-        <p>Something to do</p>
-      </div>
+      <button
+        class="circle-add-button button is-primary"
+        routerLink="./new-task"
+      >
+        +
+      </button>
     </div>
   </div>
 </div>
