--- a/frontend/src/app/pages/task-view/task-view.component.scss
+++ b/frontend/src/app/pages/task-view/task-view.component.scss
@@ -1,11 +1,4 @@
 @import "../../../main-styles.scss";
-.centered-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
 
 .task-manager-container {
   display: flex;
@@ -26,6 +19,7 @@
 }
 
 .task-list-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: 250px;
@@ -88,4 +82,14 @@
     text-decoration: line-through;
     opacity: 0.8;
   }
+}
+
+.circle-add-button {
+  position: absolute;
+  bottom: 35px;
+  right: 35px;
+  height: 50px;
+  width: 50px;
+  border: none;
+  border-radius: 50%;
 }
