--- a/frontend/src/app/pages/task-view/task-view.component.html
+++ b/frontend/src/app/pages/task-view/task-view.component.html
@@ -16,9 +16,16 @@
         + New List
       </button>
     </div>
+
+    <!-- Taskss -->
     <div class="task-list-container has background-white">
       <h1 class="title has-text-primary">Tasks</h1>
-      <div class="task" *ngFor="let task of tasks">
+      <div
+        class="task"
+        *ngFor="let task of tasks"
+        (click)="onTaskClick(task)"
+        [ngClass]="{ completed: task.completed }"
+      >
         <p>{{ task.title }}</p>
       </div>
       <button
