--- a/frontend/src/main-styles.scss
+++ b/frontend/src/main-styles.scss
@@ -42,3 +42,10 @@ body {
   border-radius: 5px;
   padding: 35px;
 }
+
+.title {
+  font-family: "Lato";
+  font-size: 24px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
