--- a/frontend/src/app/pages/login-page/login-page.component.html
+++ b/frontend/src/app/pages/login-page/login-page.component.html
@@ -5,6 +5,7 @@
     <div class="field">
       <p class="control has-icons-left has-icons-right">
         <input
+          #emailInput
           class="input has-background-light"
           type="email"
           placeholder="Email"
@@ -29,7 +30,12 @@
     </div>
     <div class="field is-pulled-right">
       <p class="control">
-        <button class="button is-success has-text-white">Login</button>
+        <button
+          class="button is-success has-text-white"
+          (click)="onLoginButtonClicked(emailInput.value, pwInput.value)"
+        >
+          Login
+        </button>
       </p>
     </div>
   </div>
