--- a/frontend/src/app/pages/task-view/task-view.component.html
+++ b/frontend/src/app/pages/task-view/task-view.component.html
@@ -19,21 +19,30 @@
 
     <!-- Taskss -->
     <div class="task-list-container has background-white">
-      <h1 class="title has-text-primary">Tasks</h1>
-      <div
-        class="task"
-        *ngFor="let task of tasks"
-        (click)="onTaskClick(task)"
-        [ngClass]="{ completed: task.completed }"
-      >
-        <p>{{ task.title }}</p>
+      <div *ngIf="tasks">
+        <h1 class="title has-text-primary">Tasks</h1>
+        <div
+          class="task"
+          *ngFor="let task of tasks"
+          (click)="onTaskClick(task)"
+          [ngClass]="{ completed: task.completed }"
+        >
+          <p>{{ task.title }}</p>
+        </div>
+        <h3 class="empty-state-text" *ngIf="tasks.length === 0">
+          No Tasks to Display
+        </h3>
+        <button
+          class="circle-add-button button is-primary"
+          routerLink="./new-task"
+        >
+          +
+        </button>
       </div>
-      <button
-        class="circle-add-button button is-primary"
-        routerLink="./new-task"
-      >
-        +
-      </button>
+
+      <div *ngIf="!tasks">
+        <h3 class="empty-state-text">Please select a list to display tasks</h3>
+      </div>
     </div>
   </div>
 </div>
