--- a/frontend/src/app/pages/task-view/task-view.component.scss
+++ b/frontend/src/app/pages/task-view/task-view.component.scss
@@ -5,15 +5,18 @@
   width: 100%;
   height: 100%;
   max-width: 1000px;
-  max-height: 600px;
+  max-height: 680px;
 }
 
 .sidebar {
   display: flex;
   flex-direction: column;
+
   width: 250px;
   background: white;
+
   padding: 42px;
+
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
 }
@@ -22,13 +25,20 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 250px;
-  background: rgb(252, 249, 249);
-  padding: 42px;
   flex-grow: 1;
+  padding: 42px;
 
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
+
+  .top-bar {
+    margin-bottom: 20px;
+    display: flex;
+    .title {
+      flex-grow: 1;
+      margin: 0;
+    }
+  }
 }
 
 .list-menu {
@@ -36,8 +46,10 @@
   flex-direction: column;
   margin-top: 15px;
   flex-grow: 1;
+
   .list-menu-item {
     display: flex;
+
     align-items: center;
     padding: 10px 15px;
     border-radius: 5px;
@@ -45,6 +57,7 @@
     width: 100%;
     color: #5f5f5f;
     margin-bottom: 5px;
+
     &:hover {
       background: $light;
     }
@@ -57,23 +70,46 @@
 }
 
 .task {
+  display: flex;
   background: white;
   padding: 15px 20px;
   border-radius: 5px;
   margin-top: 10px;
+
+  align-items: center;
+
   &:not(.complete) {
     cursor: pointer;
     transition: box-shadow 0.2s ease, transform 0.2s ease;
+
     &:active {
       transform: scale(0.95);
     }
+
     &:hover {
       box-shadow: 0 0 0 5px #eeeeee;
+
+      .task-buttons {
+        opacity: 1;
+        transform: scale(1);
+      }
     }
   }
-  &.completed {
+
+  &.completed .task-text {
     text-decoration: line-through;
     opacity: 0.8;
+  }
+
+  .task-text {
+    display: flex;
+    flex-grow: 1;
+  }
+
+  .task-buttons {
+    transition: opacity 0.2s, transform 0.2s;
+    opacity: 0;
+    transform: scale(0.85);
   }
 }
 
@@ -83,12 +119,11 @@
   right: 35px;
   height: 50px;
   width: 50px;
-  border: none;
   border-radius: 50%;
 }
 
 .empty-state-text {
   font-size: 20px;
-  color: #999;
+  color: #777;
   text-align: center;
 }
