--- a/frontend/src/app/pages/task-view/task-view.component.html
+++ b/frontend/src/app/pages/task-view/task-view.component.html
@@ -1,7 +1,8 @@
 <!-- <div class="centered-content">
   <div class="task-manager-container">
-    <div class="sidebar has background-white">
+    <div class="sidebar has-background-white">
       <h1 class="title has-text-primary">Lists</h1>
+
       <div class="list-menu">
         <a
           class="list-menu-item"
@@ -10,69 +11,23 @@
           routerLinkActive="is-active"
         >
           <p>{{ list.title }}</p>
+          <a [routerLink]="['/edit-list', selectedListId]">
+            <div class="icon">
+              <i class="fas fa-edit"></i>
+            </div>
+          </a>
+          <a (click)="onDeleteListClick()">
+            <div class="icon">
+              <i class="fas fa-trash"></i>
+            </div>
+          </a>
         </a>
       </div>
+
       <button class="button is-primary has-text-white" routerLink="/new-list">
         + New List
       </button>
-    </div>
-
-  
-    <div class="task-list-container has background-white">
-      <div *ngIf="tasks">
-        <div class="top-bar">
-          <h1 class="title has-text-primary">Tasks</h1>
-          <div class="dropdown is-hoverable">
-            <div class="dropdown-trigger">
-              <button
-                class="button"
-                aria-haspopup="true"
-                aria-controls="dropdown-menu"
-              >
-                <span class="icon is-small">
-                  <i class="fas fa-cog" aria-hidden="true"></i>
-                </span>
-              </button>
-            </div>
-            <div class="dropdown-menu" role="menu">
-              <div class="dropdown-content">
-                <div class="dropdown-item">
-                  <p>
-                    You can insert <strong>any type of content</strong>within
-                    the dropdown menu
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div
-            class="task"
-            *ngFor="let task of tasks"
-            (click)="onTaskClick(task)"
-            [ngClass]="{ completed: task.completed }"
-          >
-            <p>{{ task.title }}</p>
-          </div>
-          <h3 class="empty-state-text" *ngIf="tasks.length === 0">
-            No Tasks to Display
-          </h3>
-          <button
-            class="circle-add-button button is-primary"
-            routerLink="./new-task"
-          >
-            +
-          </button>
-        </div>
-
-        <div *ngIf="!tasks">
-          <h3 class="empty-state-text">
-            Please select a list to display tasks
-          </h3>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
+    </div> -->
 
 <div class="centered-content">
   <div class="task-manager-container">
@@ -86,7 +41,23 @@
           [routerLink]="['/lists', list._id]"
           routerLinkActive="is-active"
         >
-          <p>{{ list.title }}</p>
+          <div class="list-item">
+            <div class="list-title">
+              <p>{{ list.title }}</p>
+            </div>
+            <div class="list-buttons">
+              <a [routerLink]="['/edit-list', selectedListId]">
+                <div class="icon">
+                  <i class="fas fa-edit"></i>
+                </div>
+              </a>
+              <a (click)="onDeleteListClick()">
+                <div class="icon is-danger">
+                  <i class="fas fa-trash"></i>
+                </div>
+              </a>
+            </div>
+          </div>
         </a>
       </div>
 
@@ -99,83 +70,56 @@
       <div *ngIf="tasks">
         <div class="top-bar">
           <h1 class="title has-text-primary">Tasks</h1>
-          <div class="dropdown is-hoverable is-right">
-            <div class="dropdown-trigger">
+          <div
+            class="task"
+            *ngFor="let task of tasks"
+            (click)="onTaskClick(task)"
+            [ngClass]="{ completed: task.completed }"
+          >
+            <div class="task-text">
+              <p>{{ task.title }}</p>
+            </div>
+            <div class="task-buttons">
               <button
                 class="button"
-                aria-haspopup="true"
-                aria-controls="dropdown-menu4"
+                [routerLink]="['/lists', selectedListId, 'edit-task', task._id]"
+                aria-label="edit task"
               >
-                <span class="icon is-small">
-                  <i class="fas fa-cog" aria-hidden="true"></i>
-                </span>
+                <div class="icon">
+                  <i class="fas fa-edit"></i>
+                </div>
+              </button>
+
+              <button
+                class="button is-danger"
+                (click)="onDeleteTaskClick(task._id)"
+                style="margin-left: 10px"
+                aria-label="Delete Task"
+              >
+                <div class="icon">
+                  <i class="fas fa-trash"></i>
+                </div>
               </button>
             </div>
-            <div class="dropdown-menu" id="dropdown-menu4" role="menu">
-              <div class="dropdown-content">
-                <a
-                  [routerLink]="['/edit-list', selectedListId]"
-                  class="dropdown-item"
-                >
-                  Edit
-                </a>
-                <a
-                  (click)="onDeleteListClick()"
-                  class="dropdown-item has-text-danger"
-                >
-                  Delete
-                </a>
-              </div>
-            </div>
           </div>
+
+          <h3 class="empty-state-text" *ngIf="tasks.length === 0">
+            No tasks here! Create a new task.
+          </h3>
+
+          <button
+            routerLink="./new-task"
+            class="circle-add-button button is-primary"
+          >
+            ➕
+          </button>
         </div>
 
-        <!-- Task Elements -->
-        <div
-          class="task"
-          *ngFor="let task of tasks"
-          (click)="onTaskClick(task)"
-          [ngClass]="{ completed: task.completed }"
-        >
-          <div class="task-text">
-            <p>{{ task.title }}</p>
-          </div>
-          <div class="task-buttons">
-            <button
-              class="button"
-              [routerLink]="['/lists', selectedListId, 'edit-task', task._id]"
-            >
-              <div class="icon">
-                <i class="fas fa-edit"></i>
-              </div>
-            </button>
-
-            <button
-              class="button is-danger"
-              (click)="onDeleteTaskClick(task._id)"
-              style="margin-left: 10px"
-            >
-              <div class="icon">
-                <i class="fas fa-trash"></i>
-              </div>
-            </button>
-          </div>
+        <div *ngIf="!tasks">
+          <h3 class="empty-state-text">
+            Please select a list from the sidebar
+          </h3>
         </div>
-
-        <h3 class="empty-state-text" *ngIf="tasks.length === 0">
-          There are no tasks here! Click the add button to create a new task.
-        </h3>
-
-        <button
-          routerLink="./new-task"
-          class="circle-add-button button is-primary"
-        >
-          +
-        </button>
-      </div>
-
-      <div *ngIf="!tasks">
-        <h3 class="empty-state-text">Please select a list from the sidebar</h3>
       </div>
     </div>
   </div>
