--- a/frontend/src/app/pages/task-view/task-view.component.scss
+++ b/frontend/src/app/pages/task-view/task-view.component.scss
@@ -34,6 +34,7 @@
   .top-bar {
     margin-bottom: 20px;
     display: flex;
+    flex-direction: column;
     .title {
       flex-grow: 1;
       margin: 0;
@@ -49,34 +50,52 @@
 
   .list-menu-item {
     display: flex;
-
     align-items: center;
+    justify-content: space-between;
+    gap: 10px;
     padding: 10px 15px;
     border-radius: 5px;
-
     width: 100%;
     color: #5f5f5f;
     margin-bottom: 5px;
+    position: relative;
+
+    .list-menu-item p {
+      margin-right: 16px;
+    }
 
     &:hover {
-      background: $light;
+      background: rgb(168, 251, 237);
+      .list-buttons {
+        opacity: 1;
+        transform: scale(1);
+      }
     }
 
     &.is-active {
-      background-color: #cff8ef;
+      background-color: #73f0d5;
       color: $dark-green;
     }
   }
 }
 
+.list-buttons {
+  opacity: 0;
+  transform: scale(0.85);
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-left: 10px;
+}
 .task {
   display: flex;
   background: white;
-  padding: 15px 20px;
+  padding: 5px 10px;
   border-radius: 5px;
-  margin-top: 10px;
-
+  margin-top: 50px;
   align-items: center;
+  width: 100%;
 
   &:not(.complete) {
     cursor: pointer;
@@ -117,8 +136,8 @@
   position: absolute;
   bottom: 35px;
   right: 35px;
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
   border-radius: 50%;
 }
 
@@ -126,4 +145,8 @@
   font-size: 20px;
   color: #777;
   text-align: center;
+}
+
+.is-danger {
+  color: red;
 }
