--- a/frontend/src/main-styles.scss
+++ b/frontend/src/main-styles.scss
@@ -1,7 +1,7 @@
 //Google Fonts
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700|Nunito:400,700");
 
-$turquoise: #44ddd0;
+$turquoise: #050401;
 $green: #27d7a1;
 $light-green: #45f69e;
 $dark-green: rgb(0, 100, 80);
